feat: add JUnit, setup tests